--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
                 <div class="image-container">
                   
                     <div class="home_card">
-                      <img src="./images/Colored Pencils.png">
+                      <a href="./coloredcrayons.html"><img src="./images/Colored Pencils.png"></a>
                     </div>
                   
                     <div class="home_card">
